# PowerMeanZero

./: .gitignore
lzero/entry/: eval_alphazero.py
lzero/mcts/ctree/ctree_alphazero/: 1-mcts.cpp  1-node.cpp  1-node.h  2-mcts.cpp  2-node.cpp  2-node.h  4-node.h  CMakeLists.txt  mcts_alphazero.c++  mcts_alphazero.cpp  node_alphazero.c++  node_alphazero.cpp  node_alphazero.h  self_play.cpp  self_play_v2.cpp
lzero/mcts/ctree/ctree_alphazero/test/: eval_alphazero_ctree.py
lzero/mcts/ptree/: ptree_az.py
lzero/policy/: alphazero.py  muzero.py
lzero/worker/: alphazero_evaluator.py
zoo/board_games/chess/envs/: chess_env.py  chess_lightzero_env.py  test_chess_env_auto.py  test_chess_lightzero_env.py
zoo/board_games/tictactoe/: tournament.py
zoo/board_games/tictactoe/config/: tictactoe_alphazero_bot_mode_config.py  tictactoe_alphazero_sp_mode_config.py  tictactoe_muzero_bot_mode_config.py
zoo/board_games/tictactoe/envs/: tictactoe_env.py
zoo/minigrid/config/: minigrid_muzero_config.py
